--- a/vagrant/subtask_vars/ubuntu-packages.vars.yml
+++ b/vagrant/subtask_vars/ubuntu-packages.vars.yml
@@ -7,6 +7,7 @@ packages:
   - dmsetup
   - apt-transport-https
   - gpg
+  - python3-pip
 # Install by manual signing keys and adding repos
 other_packages:
   - name: helm
